--- a/8_Graficos/8_Graficos.ipynb
+++ b/8_Graficos/8_Graficos.ipynb
@@ -615,10 +615,8 @@
     "plt.ylabel(\"Frec. Relativa\",fontsize=14)\n",
     "plt.xlabel(\"Datos\",fontsize=14)\n",
     "\n",
-    "histograma=plt.hist([2,1,3,4,2,3,4,3,5,3],5,edgecolor='dodgerblue',color='dodgerblue',alpha=0.5)\n",
-    "histograma=plt.hist([2,1,3,4,2,3,4,3,5,3],5,cumulative=True,edgecolor='yellowgreen',color='yellowgreen',alpha=0.5)\n",
-    "\n",
-    "clases=histograma[1]\n",
+    "plt.hist([2,1,3,4,2,3,4,3,5,3],5,edgecolor='dodgerblue',color='dodgerblue',alpha=0.5)\n",
+    "plt.hist([2,1,3,4,2,3,4,3,5,3],5,cumulative=True,edgecolor='yellowgreen',color='yellowgreen',alpha=0.5)\n",
     "\n",
     "plt.xticks(clases)\n",
     "plt.show(block=False)\n",
