Practica Tabla de Frecuencias
Se crea y oganiza la práctica tabla de frecuencias, queda pendiente crear los set de datos

--- a/9_Modulos/9_Modulos_y_Paquetes.ipynb
+++ b/9_Modulos/9_Modulos_y_Paquetes.ipynb
@@ -175,7 +175,7 @@
    "metadata": {},
    "source": [
     "#### Mini_Ejemplo: Usar Módulos Propios\n",
-    "<a id='Min-eje_Modulos propios'></a>\n",
+    "<a id='Min-eje_Modulos_Propios'></a>\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: Usar Módulos Propios\n",
