Práctica Tabla de Frecuencias
Se termina la práctica Tabla de Frecuencias para la guía com para los profesores

--- a/10_Practicas/Tabla_de_Frecuencias/Practica/Programa/F_Auxiliares/_b_lectura_datos.ipynb
+++ b/10_Practicas/Tabla_de_Frecuencias/Practica/Programa/F_Auxiliares/_b_lectura_datos.ipynb
@@ -4,35 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## b. Leer y almacenar datos (lectura_datos)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## b. Leer y almacenar datos (lectura_datos)\n",
+    "\n",
     "- #### **Objetivo :**\n",
-    "    Almacena los datos del [archivo](../Testing/Ej_Temp_Ad.txt \"Ver archivo de entradas\") en una lista y esta la almacena en la lista indicada."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Almacena los datos del [archivo](../Testing/Ej_Temp_Ad.txt \"Ver archivo de entradas\") en una lista y esta la almacena en la lista indicada.\n",
+    "\n",
     "- #### **Entradas :** \n",
     "~~~python\n",
     "archivo_datos='Ej_Temp_Ad.txt'\n",
     "l_datos=[]\n",
-    "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "~~~\n",
+    "\n",
     "- #### **Salidas :** \n",
     "\n",
-    "**1. data:** Lista con los datos convertidos a enteros, del archivo inidcado en el archivo de entrada.   "
+    "**1. data:** Lista con los datos convertidos a flotante."
    ]
   },
   {
@@ -48,8 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### **Codigo :** \n",
-    "Complete la función para convertir las entradas en las salidas, ingrese al [material de apoyo](#material \"Ir al material de apoyo\") para ver los ejemplos que lo pueden guiar, una vez terminada ejecutela y puruebela [aquí](#prueba)."
+    "- #### **Código :** \n",
+    "Complete la función para convertir las entradas en las salidas, ingrese al [material de apoyo](#material \"Ir al material de apoyo\") para ver los ejemplos que lo pueden guiar, una vez terminada ejecútela y pruébela [aquí](#prueba)."
    ]
   },
   {
@@ -100,8 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [Almacenamiento de datos](../../../../../7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Min-eje_A_Archivo_i1.txt \"Ir al capitulo de Lectura de archivos\")\n",
-    "- [Manejo de listas y tuplas](../../../../../5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5_Estructura-de-Datos-Basicas \"Ir al capitulo de Estructuras de datos\")"
+    "- [Almacenamiento de datos](../../../../../7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Min-eje_A_Archivo_i1.txt \"Ir al capítulo de Lectura de archivos\")\n",
+    "- [Manejo de listas y tuplas](../../../../../5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5_Estructura-de-Datos-Basicas \"Ir al capítulo de Estructuras de datos\")"
    ]
   },
   {
