--- a/10_Practicas/Tabla_de_Frecuencias/Practica/Programa/Plantilla_TF.ipynb
+++ b/10_Practicas/Tabla_de_Frecuencias/Practica/Programa/Plantilla_TF.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
    "source": [
     "def main():\n",
     "    \"\"\"\n",
-    "    Hacer un programa que al ingresar uno o varios archivos de datos, asociados a un numero de clase, y a un color, \n",
+    "    Hacer un programa que, al ingresar uno o varios archivos de datos, asociados a un número de clase, y a un color, \n",
     "    calcule y guarde para cada paquete de datos las medidas de centramiento y dispersión, la tabla de frecuencias, \n",
     "    y su histograma.\n",
     "    \"\"\"\n",
@@ -110,7 +110,7 @@
     "    \"0. Pedir y leer archivo de entradas\"\n",
     "    # Ingresar archivo de entrada.\n",
     "    # Leer el archivo de entradas\n",
-    "    # Extraer lista de archivos, lista de numeros de clase, y colores.\n",
+    "    # Extraer lista de archivos, lista de números de clase, y colores.\n",
     "    # Crear una lista vacía para almacenar las listas de datos.\n",
     "    \n",
     "    \"Realizar el algoritmo de tabla de frecuencias e histograma\"\n",
@@ -123,7 +123,7 @@
     "        # Leer y almacenar datos.\n",
     "        \n",
     "        \"2. Calcular las medidas de centramiento y dispersión\"\n",
-    "        # Calcular y almacenar las resultados de las medidas.\n",
+    "        # Calcular y almacenar los resultados de las medidas.\n",
     "        # Extraer el rango.\n",
     "        \n",
     "        \"3. Crear la tabla de frecuencias\"  \n",
