--- a/10_Practicas/Tabla_de_Frecuencias/Tabla_de_Frecuencias.ipynb
+++ b/10_Practicas/Tabla_de_Frecuencias/Tabla_de_Frecuencias.ipynb
@@ -13,9 +13,9 @@
    "source": [
     "Es una herramienta de la estadística descriptiva que permite organizar un conjunto de datos o muestra, mediante la distribución de sus frecuencias absoluta y relativa, de variables cuantitativas como cualitativas ordinales, así como también para datos individuales o agrupados.\n",
     "\n",
-    "El análisis de una tabla de frecuencias se puede apoyar en su histograma y en las medidas de centramiento y disperción de la muestra.\n",
+    "El análisis de una tabla de frecuencias se puede apoyar en su histograma y en las medidas de centramiento y dispersión de la muestra.\n",
     "\n",
-    "Las medidas de centramiento mas utilizadas son la media, la mediana y la moda, está última puede ser multiple como muestra la siguiente ejemplo, y las medidas de disperción mas utilizadas son la desviación estándar, el rango, y la varianza.\n",
+    "Las medidas de centramiento más utilizadas son la media, la mediana y la moda, está última puede ser múltiple como muestra el siguiente ejemplo, y las medidas de dispersión más utilizadas son la desviación estándar, el rango, y la varianza.\n",
     "\n",
     "### **Ejemplo**\n",
     "- #### Tabla de frecuencias\n",
@@ -32,12 +32,11 @@
    "source": [
     "## **Índice**\n",
     "\n",
-    "- [Ejemplo: Monitoreo de temperartura](Ejemplo/Ej_Monitoreo_de_Temperaturas.ipynb#Ejemplo \"Ir al ejemplo\")\n",
+    "- [Ejemplo: Monitoreo de temperatura](Ejemplo/Ej_Monitoreo_de_Temperaturas.ipynb#Ejemplo \"Ir al ejemplo\")\n",
     "- [Práctica](Practica/Practica_TF.ipynb)\n",
-    "- [Testing](Practica/Programa/Testing/testing_TF.py \"Ir archivo de Testing\")\n",
     "- [Análisis del problema](Practica/Programa/Analisis.ipynb \"Ir al análisis del problema\")\n",
     "- [Instrucciones del programa](Practica/Programa/Instrucciones.ipynb \"Ir a las instrucciones del programa\")\n",
-    "- [Código del Programa](Practica/Programa/Tabla_de_Frecuencias.py \"Ir a archivo del programa\")"
+    "- [Código del Programa](Practica/Programa/Tabla_de_Frecuencias.py \"Ir a archivo del programa\") "
    ]
   }
  ],
