--- a/10_Practicas/Tabla_de_Frecuencias/Practica/Programa/F_Auxiliares/_c_medidas.ipynb
+++ b/10_Practicas/Tabla_de_Frecuencias/Practica/Programa/F_Auxiliares/_c_medidas.ipynb
@@ -4,24 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## c. Calcular las medidas de centramiento y dispersión (medidas)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## c. Calcular las medidas de centramiento y dispersión (medidas)\n",
+    "\n",
     "- #### **Objetivo :**\n",
-    "    Cálcula las medidas de centramiento y dispersión de una lista de datos."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Calcula las medidas de centramiento y dispersión de una lista de datos.\n",
+    "\n",
     "- #### **Entradas :** \n",
     "\n",
-    "**1. data:** Lista con los datos convertidos a enteros, del archivo inidcado en el archivo de entrada."
+    "**1. data:** Lista con los datos convertidos a flotante."
    ]
   },
   {
@@ -42,20 +32,15 @@
     "**1. r_medidas:** Tupla con los resultados de las medidas de centramiento y dispersión: \n",
     "~~~python\n",
     "r_medidas= (69.67333333333333, 69.8, 66.0, 10.011088983849813, 59.8, 100.2219026425591)\n",
-    "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- #### **Codigo :** \n",
-    "Complete la función para convertir las entradas en las salidas, ingrese al [material de apoyo](#material \"Ir al material de apoyo\") para ver los ejemplos que lo pueden guiar, una vez terminada ejecutela y puruebela [aquí](#prueba)."
+    "~~~\n",
+    "\n",
+    "- #### **Código :** \n",
+    "Complete la función para convertir las entradas en las salidas, ingrese al [material de apoyo](#material \"Ir al material de apoyo\") para ver los ejemplos que lo pueden guiar, una vez terminada ejecútela y pruébela [aquí](#prueba)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +48,7 @@
     "\n",
     "#Calcular las medidas de centramiento y dispersión\n",
     "def medidas (data):\n",
-    "    \"Cálcular las medidas de centramiento y dispersión de una lista de datos.\"\n",
+    "    \"Calcular las medidas de centramiento y dispersión de una lista de datos.\"\n",
     "    \n",
     "    # Escriba aquí el código:\n",
     "   \n",
@@ -104,7 +89,7 @@
    "source": [
     "- [Cálculo de medidas](../../../../../9_Modulos/9_Modulos_y_Paquetes.ipynb#Min-eje_Modulos_propios \"Ir al Mini_Ejemplo: Módulos propios\")\n",
     "- [Manejo de listas y tuplas](../../../../../5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5_Estructura-de-Datos-Basicas \"Ir al capítulo de Estructuras de datos\")\n",
-    "- [Módulo statistics](../../../../../9_Modulos/9_Modulos_y_Paquetes.ipynb#9.3_Libreria-Estandar \"Ir al capitulo de Estructuras de datos\")"
+    "- [Módulo statistics](../../../../../9_Modulos/9_Modulos_y_Paquetes.ipynb#9.3_Libreria-Estandar \"Ir al capítulo de Estructuras de datos\")"
    ]
   },
   {
